# xezim-core

./: .gitignore  CHANGELOG_sv2023.md  Cargo.toml
.github/workflows/: msrv.yml  test.yml
src/: bits2.rs  elaborate.rs  lib.rs  stdout_sink.rs  value.rs  vcd_sink.rs
src/sdf/: mod.rs
xezim-parser/: Cargo.toml
xezim-parser/src/: lib.rs  main.rs  strict_check.rs
xezim-parser/src/ast/: decl.rs  expr.rs  mod.rs  module.rs  stmt.rs  types.rs
xezim-parser/src/lexer/: scanner.rs  token.rs
xezim-parser/src/parse/: declarations.rs  expressions.rs  helpers.rs  items.rs  mod.rs  statements.rs  types.rs
xezim-parser/src/preprocessor/: mod.rs
xezim-parser/tests/: inline_conditionals.rs  literal_validation.rs  macro_in_string_literal.rs  not_property_parse.rs  sv2023.rs
