[package]
name = "sv-parser"
version = "0.4.0"
edition = "2021"
rust-version = "1.75"
description = "SystemVerilog parser targeting IEEE 1800-2017/2023"
license = "MIT OR Apache-2.0"
keywords = ["systemverilog", "parser", "hdl", "verilog", "eda"]
categories = ["parser-implementations", "development-tools"]

[dependencies]
serde = { version = "1", features = ["derive"], optional = true }
serde_json = { version = "1", optional = true }

[features]
default = ["serde", "json-cli"]
# Enables Serialize/Deserialize on all AST types. When disabled, the AST
# types are pure data with no serialization trait impls, and `src/serde/`
# helpers are not compiled.
serde = ["dep:serde"]
# Enables the `sv-parse --dump-json` flag — emits one JSON object per
# input file (fields: file, source_text, ast, errors, warnings).
# Consumed by xevdb's Python wrapper (xevdb/src/xevdb/sv.py).
json-cli = ["serde", "dep:serde_json"]

[lib]
name = "sv_parser"
path = "src/lib.rs"

[[bin]]
name = "sv-parse"
path = "src/main.rs"
